# video-subtitle-learning-app

./: README.md  效果图.md  英语视频实时字幕软件开发方案.md
video-subtitle-learning-app/: .gitignore  README.md  package-lock.json  package.json  pyproject.toml
video-subtitle-learning-app/backend/app/: main.py
video-subtitle-learning-app/docs/: collection-notebook-design.md  cuda-cudnn-setup.md  desktop-packaging-and-deployment.md  desktop-runtime-strategy.md  ffmpeg-setup.md  icon-style-ideas.md  multilingual-subtitle-design.md  notebook-pdf-export-design.md  portable-build-guide.md  user-installation-guide.md
video-subtitle-learning-app/ffmpeg/: README.txt
video-subtitle-learning-app/frontend/: index.html  package-lock.json  package.json  vite.config.js
video-subtitle-learning-app/frontend/src/: App.jsx  styles.css
video-subtitle-learning-app/outputs/analysis/: 【1000集全】[英文字幕]生活场景英语 Learn English with Bob the Ca - 3.06.[20190122] Let's Learn English in t(Av1456100356,P3).segment-1.qwen3.6-plus.analysis.json  【1000集全】[英文字幕]生活场景英语 Learn English with Bob the Ca - 3.06.[20190122] Let's Learn English in t(Av1456100356,P3).segment-9.qwen3.6-plus.analysis.json
video-subtitle-learning-app/outputs/transcripts/: 【1000集全】[英文字幕]生活场景英语 Learn English with Bob the Ca - 3.06.[20190122] Let's Learn English in t(Av1456100356,P3).en.srt  (+3 more)
video-subtitle-learning-app/scripts/: build-portable.ps1  run_sentence_analysis.py  run_transcription.py  run_translation.py  tauri-dev.ps1
video-subtitle-learning-app/src-tauri/: Cargo.toml  tauri.conf.json
(+29 files in other folders)
