[project]
name = "video-subtitle-learning-app"
version = "0.1.0"
description = "Desktop app for bilingual subtitles, translation, and sentence analysis."
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi>=0.135.3",
    "faster-whisper>=1.2.1",
    "httpx>=0.28.1",
    "python-multipart>=0.0.20",
    "reportlab>=4.4.10",
    "srt>=3.5.3",
    "uvicorn>=0.43.0",
]

[tool.uv]
package = false
