[package]
name = "video_subtitle_learning_app"
version = "0.1.0"
description = "Desktop shell for the video subtitle learning app"
edition = "2021"

[lib]
name = "video_subtitle_learning_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
